--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -3,8 +3,7 @@
 // Each post is wrapped in `.post` and is used on default and post layouts. Each
 // page is wrapped in `.page` and is only used on the page layout.
 
-.page,
-.post {
+article {
   margin-bottom: 4em;
 
   li + li {
@@ -12,14 +11,9 @@
   }
 }
 
-// Blog post or page title
-.page-title,
-.post-title,
-.post-title a {
+.title,
+.title a {
   color: #303030;
-}
-.page-title,
-.post-title {
   margin-top: 0;
 }
 
